--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,8 +5,8 @@
   
     <input class="input" placeholder="Email" formControlName="email" />
   
-    <input class="input" placeholder="Password" formControlName="password" />
+    <input class="input" type="password" placeholder="Password" formControlName="password" />
   
-    <button class="btn" type="submit" [disabled]="signupformGroup.invalid">Add</button>
+    <button class="btn" type="submit" [disabled]="signupformGroup.invalid">Sign up</button>
 </form>
 <a href="" routerLink="/login">Go to login</a>
