--- a/src/app/orderlist/orderlist.component.html
+++ b/src/app/orderlist/orderlist.component.html
@@ -1,20 +1,105 @@
-
-<!-- <app-order-brief *ngFor="let order of orderList" [order]="order"></app-order-brief> -->
-<table>
-    <tr>
-        <th>datePlaced</th>
-        <th>Item Details</th>
-        <th>status</th>
-    </tr>
-    <tr *ngFor="let order of orderList">
-        <td>{{order.datePlaced}}</td>
-        <td>
-            <div *ngFor="let item of order.orderItemDetails">
-                <p>{{item.productName}}</p>
-                <p>{{item.quantity}}</p>
-                <p>{{item.purchasedPrice}}</p>
-            </div>
+<!-- <h1>Order List</h1> -->
+<ng-container *ngIf="this.orderService.orders.length > 0; else loading">
+    <table mat-table [dataSource]="orderService.orders" class="mat-elevation-z8">
+        <!-- Define the columns -->
+        <ng-container matColumnDef="Index">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let order; let i = index">{{ i + 1 }}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="DatePlaced">
+        <th mat-header-cell *matHeaderCellDef>datePlaced</th>
+        <td mat-cell *matCellDef="let order">{{ order.datePlaced }}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="Status">
+        <th mat-header-cell *matHeaderCellDef>status</th>
+        <td mat-cell *matCellDef="let order">{{ order.status }}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="Details">
+        <th mat-header-cell *matHeaderCellDef>Details</th>
+        <td mat-cell *matCellDef="let order">
+            <a [routerLink]="'/orders/' + order.id">View</a>
         </td>
-        <td>{{order.status}}</td>
-    </tr>
-</table>
+        </ng-container>
+    
+        <ng-container matColumnDef="Action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let order">
+            <button (click)="cancelOrder(order.id)" [disabled]="order.status !== 'Processing'">Cancel</button>
+            <br />
+            <button *ngIf="isAdmin()" (click)="completeOrder(order.id)" [disabled]="order.status !== 'Processing'">Complete</button>
+        </td>
+        </ng-container>
+        <!-- Define the row -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+        
+    <!-- <table> 
+        <tr>
+            <th>No.</th>
+            <th>datePlaced</th>
+            <th>status</th>
+            <th>Details</th>
+            <th>Action</th>
+        </tr>
+        <tr *ngFor="let order of this.orderService.orders; let i = index">
+            <td>{{i + 1}}</td>
+            <td>{{order.datePlaced}}</td>
+            <td>{{order.status}}</td>
+            <td>
+                <a href="" routerLink="/orders/{{order.id}}">View</a>
+            </td>
+            <td>
+                <button (click)="cancelOrder(order.id)" [disabled]="order.status !== 'Processing'">Cancel</button>
+            </td>
+        </tr>
+    </table> -->
+    <ng-container *ngIf="!isAdmin(); else adminBlock">
+        <button class="example-button-row" mat-flat-button color="accent" (click)="getTopRecentProduct()">Get Top 3 most recently purchased Items</button>
+        <button class="example-button-row" mat-flat-button color="accent" (click)="getUserTopFrequentProduct()">Get Top 3 most frequently purchased Items</button>
+
+        <ng-container *ngIf="productService.userFrequentProducts.length > 0" >
+            <h2>Most Frequent Items</h2>
+            <app-product-brief *ngFor="let product of productService.userFrequentProducts" 
+            [product]="product" 
+            [isInWatchlist]="productService.isInWatchlist(product)"
+            [isInCart]="false"></app-product-brief>
+        </ng-container>
+
+        <ng-container *ngIf="this.productService.userRecentProducts.length > 0" >
+            <h2>Most Recent Items</h2>
+            <app-product-brief *ngFor="let product of productService.userRecentProducts" 
+            [product]="product" 
+            [isInWatchlist]="productService.isInWatchlist(product)"
+            [isInCart]="false"></app-product-brief>
+        </ng-container>
+    </ng-container>
+
+    <ng-template #adminBlock>
+        <button class="example-button-row" mat-flat-button color="accent" (click)="getTopProfitProduct()">Get Top 3 most profitable Items</button>
+        <button class="example-button-row" mat-flat-button color="accent" (click)="getAdminTopFrequentProduct()">Get Top 3 most frequently purchased Items (Admin)</button>
+
+        <ng-container *ngIf="productService.adminFrequentProducts.length > 0" >
+            <h2>Most Frequent Items(For Admin)</h2>
+            <app-product-brief *ngFor="let product of productService.adminFrequentProducts" 
+            [product]="product" 
+            [isInWatchlist]="productService.isInWatchlist(product)"
+            [isInCart]="false"></app-product-brief>
+        </ng-container>
+
+        <ng-container *ngIf="this.productService.profitableProducts.length > 0" >
+            <h2>Most Profitable Items(For Admin)</h2>
+            <app-product-brief *ngFor="let product of productService.profitableProducts" 
+            [product]="product" 
+            [isInWatchlist]="productService.isInWatchlist(product)"
+            [isInCart]="false"></app-product-brief>
+        </ng-container>
+    </ng-template>
+</ng-container>
+
+<ng-template #loading>
+    <h1>Loading...</h1>
+</ng-template>
