--- a/src/app/product-collection/product-collection.component.html
+++ b/src/app/product-collection/product-collection.component.html
@@ -1,4 +1,4 @@
-<h1>Product List</h1>
+<h1>Products</h1>
 
 <!-- <app-product-brief *ngFor="let product of productService.products" 
 [product]="product" 
@@ -15,4 +15,9 @@
     </ng-container>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
+<br />
+<ng-container *ngIf="isAdmin()">
+  <button mat-flat-button color="primary" (click)="redirectToAddProduct()">Add Product</button>
+</ng-container>
+
   
