--- a/src/app/orderlist/orderlist.component.html
+++ b/src/app/orderlist/orderlist.component.html
@@ -1,6 +1,6 @@
 <!-- <h1>Order List</h1> -->
 <ng-container *ngIf="this.orderService.orders.length > 0; else loading">
-    <table mat-table [dataSource]="orderService.orders" class="mat-elevation-z8">
+    <table mat-table [dataSource]="orderService.orders" class="order-table">
         <!-- Define the columns -->
         <ng-container matColumnDef="Index">
         <th mat-header-cell *matHeaderCellDef>No.</th>
@@ -8,12 +8,12 @@
         </ng-container>
     
         <ng-container matColumnDef="DatePlaced">
-        <th mat-header-cell *matHeaderCellDef>datePlaced</th>
-        <td mat-cell *matCellDef="let order">{{ order.datePlaced }}</td>
+        <th mat-header-cell *matHeaderCellDef>Time Placed</th>
+        <td mat-cell *matCellDef="let order">{{ order.datePlaced | date:'short' }}</td>
         </ng-container>
     
         <ng-container matColumnDef="Status">
-        <th mat-header-cell *matHeaderCellDef>status</th>
+        <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let order">{{ order.status }}</td>
         </ng-container>
     
@@ -101,5 +101,5 @@
 </ng-container>
 
 <ng-template #loading>
-    <h1>Loading...</h1>
+    <mat-spinner></mat-spinner>
 </ng-template>
