--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,16 +1,30 @@
 <ng-container *ngIf="product !== null; else noData" >
-    <h2>{{product.name}}</h2>
+    <!-- <h2>{{product.name}}</h2>
     <p>{{product.description}}</p>
     <p>{{product.wholesalePrice | currency}}</p>
     <p>Sell Price: {{product.retailPrice | currency}}</p>
     <p>{{product.quantity}}</p>
 
     <button *ngIf="!isAdmin()" (click)="addToCart(product)">Add To Cart</button>
-    
+  -->
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>{{ product.name }}</mat-card-title>
+      <mat-card-subtitle>{{ product.description }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <p>{{product.wholesalePrice | currency}}</p>
+        <p>Sell Price: {{product.retailPrice | currency}}</p>
+        <p>{{product.quantity}}</p>
+        <button mat-raised-button *ngIf="!isAdmin()" (click)="addToCart(product)">Add To Cart</button>
+        <button mat-raised-button *ngIf="!isAdmin() && !isInWatchlist" (click)="addToWatchlist(product)">Add To Watchlist</button>
+        <button mat-raised-button *ngIf="!isAdmin() && isInWatchlist" (click)="removeFromWatchlist(product)">Remove From Watchlist</button>
+      </mat-card-content>
+  </mat-card>
+  
 </ng-container>
 <ng-template #noData>
-    <!-- Content to be displayed when myComponentProperty is null -->
-    <p>Loading...</p>
+    <p><mat-spinner></mat-spinner></p>
 </ng-template>
 <br>
 <a href="" routerLink="/products/all">Back to All Products</a>
